--- a/projeto/SuperTodo/package.json
+++ b/projeto/SuperTodo/package.json
@@ -17,9 +17,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/blue-tape": "0.1.31",
+    "@types/body-parser": "^1.16.5",
     "@types/chai": "4.0.4",
     "@types/cucumber": "2.0.3",
     "@types/express": "^4.0.37",
+    "@types/express-handlebars": "0.0.29",
     "@types/selenium-webdriver": "3.0.6",
     "@types/tape": "4.2.29",
     "blue-tape": "1.0.0",
@@ -32,6 +34,9 @@
     "typescript": "2.5.2"
   },
   "dependencies": {
-    "express": "^4.15.4"
+    "body-parser": "^1.17.2",
+    "express": "4.15.4",
+    "express-handlebars": "^3.0.0",
+    "hbs": "^4.0.1"
   }
 }
