--- a/projeto/SuperTodo/package.json
+++ b/projeto/SuperTodo/package.json
@@ -7,7 +7,8 @@
     "start": "node ./build/app/app.js",
     "unit-test": "node node_modules/tape/bin/tape \"./build/**/*.unit.test.js\"",
     "func-test": "node node_modules/tape/bin/tape \"./build/**/*.func.test.js\"",
-    "cucumber": "./node_modules/.bin/cucumber-js --compiler ts:ts-node/register",
+    "cucumber": "./node_modules/.bin/cucumber-js --compiler  ts:ts-node/register",
+    "cucumber-args": "./node_modules/.bin/cucumber-js features/$args[0].feature --compiler  ts:ts-node/register;",
     "tsc": "tsc -p .",
     "cont-tsc": "tsc -w",
     "clean": "rm -rf build && mkdir build"
