--- a/projeto/SuperTodo/package.json
+++ b/projeto/SuperTodo/package.json
@@ -8,7 +8,7 @@
     "unit-test": "node node_modules/tape/bin/tape \"./build/**/*.unit.test.js\"",
     "func-test": "node node_modules/tape/bin/tape \"./build/**/*.func.test.js\"",
     "cucumber": "./node_modules/.bin/cucumber-js --compiler  ts:ts-node/register",
-    "cucumber-args": "./node_modules/.bin/cucumber-js features/$args[0].feature --compiler  ts:ts-node/register;",
+    "cucumber-args": "./node_modules/.bin/cucumber-js  --compiler  ts:ts-node/register ",
     "tsc": "tsc -p .",
     "cont-tsc": "tsc -w",
     "clean": "rm -rf build && mkdir build"
@@ -35,9 +35,9 @@
     "typescript": "2.5.2"
   },
   "dependencies": {
-    "body-parser": "^1.17.2",
+    "body-parser": "1.17.2",
     "express": "4.15.4",
-    "express-handlebars": "^3.0.0",
-    "hbs": "^4.0.1"
+    "express-handlebars": "3.0.0",
+    "hbs": "4.0.1"
   }
 }
