--- a/projeto/SuperTodo/package.json
+++ b/projeto/SuperTodo/package.json
@@ -11,7 +11,7 @@
     "tsc": "tsc -p .",
     "cont-tsc": "tsc -w",
     "clean": "rm -rf build && mkdir build",
-    "cucumber-feature": "node ./scripts/script.cucumber.js ./node_modules/.bin/cucumber-js"
+    "cucumber-feature": "node ./scripts/script.cucumber.js"
   },
   "keywords": [],
   "author": "",
