--- a/projeto/SuperTodo/package.json
+++ b/projeto/SuperTodo/package.json
@@ -11,7 +11,8 @@
     "tsc": "tsc -p .",
     "cont-tsc": "tsc -w",
     "clean": "rm -rf build && mkdir build",
-    "cucumber-feature": "node ./scripts/script.cucumber.js"
+    "cucumber-feature": "node ./scripts/script.cucumber.js",
+    "unit-test-file": "node ./scripts/script.unit-test.js"
   },
   "keywords": [],
   "author": "",
